--- a/test_1.html
+++ b/test_1.html
@@ -7,9 +7,9 @@
   									maximum-scale=1,
   									user-scalable=no">
     <title>Bootstrap 实例 - 自定义缩略图</title>
-  <link rel="stylesheet" href="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="./bootstrap-3.3.7/css/bootstrap.min.css">
   <script src="http://cdn.static.runoob.com/libs/jquery/2.1.1/jquery.min.js"></script>
-  <script src="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script src="./bootstrap-3.3.7/js/bootstrap.min.js"></script>
   <style type="text/css">
   	.row{
   		align-items: center;
