--- a/test_1.html
+++ b/test_1.html
@@ -8,7 +8,7 @@
   									user-scalable=no">
     <title>Bootstrap 实例 - 自定义缩略图</title>
   <link rel="stylesheet" href="./bootstrap-3.3.7/css/bootstrap.min.css">
-  <script src="http://cdn.static.runoob.com/libs/jquery/2.1.1/jquery.min.js"></script>
+  <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
   <script src="./bootstrap-3.3.7/js/bootstrap.min.js"></script>
   <style type="text/css">
   	.row{
