--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   									initial-scale=1,
   									maximum-scale=1,
   									user-scalable=no">
-    <title>Bootstrap 实例 - 自定义缩略图</title>
+  <title>苶敏敏和傻袍子</title>
   <link rel="stylesheet" href="./bootstrap-3.3.7/css/bootstrap.min.css">
   <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
   <script src="./bootstrap-3.3.7/js/bootstrap.min.js"></script>
