--- a/we.html
+++ b/we.html
@@ -41,6 +41,7 @@
         </div>
       </div>
     </nav>
+    <a href="./markdown_reference.html"><a>
     <div class="tab-content">
       <div id="home" class="tab-pane fade in active">
         <div class="row" id="head-2">
