--- a/we.html
+++ b/we.html
@@ -41,7 +41,7 @@
         </div>
       </div>
     </nav>
-    <a href="./markdown_reference.html"><a>
+
     <div class="tab-content">
       <div id="home" class="tab-pane fade in active">
         <div class="row" id="head-2">
@@ -167,6 +167,7 @@
       </div>
     <footer>
       <h5>Design By LiHao</h5>
+      <a href="./markdown_reference.html">jhvmn<a>
     </footer>
   </body>
 </html>
