--- a/we.html
+++ b/we.html
@@ -166,7 +166,7 @@
         </div>
       </div>
     <footer>
-      <h5>Design By LiHao</h5>
+      <h5>Designed By LiHao</h5>
     </footer>
   </body>
 </html>
