--- a/we.html
+++ b/we.html
@@ -85,7 +85,7 @@
                 以前别人问我喜欢吃什么水果的时候，我总会在思考一会后告诉他，“我不知道”，
                 因为我觉得这是一个应该认真回答的问题。如今，我去过了许多地方，遇到了许多人，
                 也吃了很多的水果，那么现在我知道，我喜欢的水果是——橙子。那么如今如果还有人
-                问我喜欢吃什么水果我回告诉他，我喜欢橙子。
+                问我喜欢吃什么水果我会告诉他，我喜欢橙子。
               </p>
               <p>
                 这就像我们一样，我希望在见过许多人，经历过许多事以后，我们还能对彼此说出
