--- a/index.html
+++ b/index.html
@@ -10,50 +10,47 @@
   <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
   <script src="./bootstrap-3.3.7/js/bootstrap.min.js"></script>
   <style rel="text/css">
-  #row1{
-    position: absolute;
-    top: 20px;
-    left: 20px;
+  #head{
+    background: black;
   }
   #dropdownMenu1{
     background: none;
-    color: black;
-    font-size: 16 px;
+    color: white;
   }
   .bar-head{
+    color: white;
     font-size: 35px;
-    color: rgba(200, 100, 100, 1);
+    margin-bottom: 30px;
   }
   </style>
 </head>
 <body>
-  <img src="http://pic1.win4000.com/wallpaper/7/57036da2de1cf.jpg" class="img-responsive" id="" alt="">
+<div id="head" class="col-md-12">
   <div class="row col-sm-12 col-md-12" id="row1">
-    <div>
       <button type="button" class="btn dropdown-toggle" id="dropdownMenu1" data-toggle="dropdown">主题
           <span class="caret"></span>
       </button>
       <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
           <li role="presentation">
-              <a role="menuitem" tabindex="-1" href="#">个人学习心得</a>
+              <a role="menuitem" tabindex="-1" href="./me.html">个人学习心得</a>
           </li>
           <li role="presentation">
-              <a role="menuitem" tabindex="-1" href="#">R</a>
+              <a role="menuitem" tabindex="-1" href="./we.html"><em>love</em></a>
           </li>
           <li role="presentation">
-              <a role="menuitem" tabindex="-1" href="#">Python</a>
+              <a role="menuitem" tabindex="-1" href="./Python期末选题.html">Python期末选题</a>
           </li>
           <li role="presentation" class="divider"></li>
           <li role="presentation">
               <a role="menuitem" tabindex="-1" href="#">数学建模</a>
           </li>
       </ul>
-    </div>
-    <div class="bar-head col-md-4 col-sm-3 col-md-offset-4">
+  </div>
+  <div class="row col-md-10 col-md-offset-1" id="row2">
+    <div class="bar-head col-md-6 col-sm-3 col-sx-3 col-md-offset-3">
       <strong>你好！欢迎来到我的个人网页，虽然它还很简陋，但是我会慢慢让它强大起来的！</strong>
     </div>
   </div>
-  <div class="row col-md-10 col-md-offset-1" id="row2">
-  </div>
+</div>
 </body>
 </html>
