--- a/index.html
+++ b/index.html
@@ -12,10 +12,14 @@
   <style rel="text/css">
   #head{
     background: black;
+    margin-bottom: 20px;
   }
   #dropdownMenu1{
     background: none;
     color: white;
+  }
+  .row{
+    margin-bottom: 40px;
   }
   .bar-head{
     color: white;
@@ -50,6 +54,31 @@
     <div class="bar-head col-md-6 col-sm-3 col-sx-3 col-md-offset-3">
       <strong>你好！欢迎来到我的个人网页，虽然它还很简陋，但是我会慢慢让它强大起来的！</strong>
     </div>
+  </div>
+</div>
+<div class="row">
+  <img src="./R_logo.jpg" class="col-md-4 col-md-offset-1 img-rounded img-responsive">
+  <div class="col-md-4 col-md-offset-1">
+    <blockquote class="pull-right">
+        <h3>R语言</h3>
+        <p class="firstp">作为统计学人的标配，R语言在相对较小的数据量下可以提供一整套的数据分析的功能。由于R是开源的，
+          有数以千计的程序包可供选择，可以应对数据处理的复杂工作
+        </p>
+        <small><a href="./me.html">我的学习总结</a></small>
+    </blockquote>
+  </div>
+</div>
+<div class="row">
+  <img src="./Python_logo.jpg" class="col-md-4 col-md-offset-1 img-rounded img-responsive">
+  <div class="col-md-4 col-md-offset-1">
+    <blockquote class="pull-right">
+        <h3>Python</h3>
+        <p class="firstp">一门简单易学的编程语言，由于它的易学以及开源，获得了大量的拥护者，从而有最为活跃的开源社区。在此基础上
+          ，大大拓展了它的应用范围。几乎无所不能。
+        </p>
+        <small><a href="./me.html">我的学习总结</a></small>
+        <small><a href="./Python期末选题.html">大二下Python跨专业课期末选题</a></small>
+    </blockquote>
   </div>
 </div>
 </body>
