--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           </li>
           <li role="presentation" class="divider"></li>
           <li role="presentation">
-              <a role="menuitem" tabindex="-1" href="#">数学建模</a>
+              <a role="menuitem" tabindex="-1" href="./math_model.html">数学建模</a>
           </li>
       </ul>
   </div>
