--- a/me.html
+++ b/me.html
@@ -2,14 +2,58 @@
 <html>
 <head>
 <meta charset='UTF-8'><meta name='viewport' content='width=device-width initial-scale=1'>
-<title>me.md</title><link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,700,400&subset=latin,latin-ext' rel='stylesheet' type='text/css'><style type='text/css'>html, body {overflow-x: initial !important;}html { font-size: 14px; background-color: rgb(255, 255, 255); color: rgb(51, 51, 51); }
-body { margin: 0px; padding: 0px; height: auto; bottom: 0px; top: 0px; left: 0px; right: 0px; font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 1rem; line-height: 1.42857; overflow-x: hidden; background: inherit; }
-a:active, a:hover { outline: 0px; }
-.in-text-selection, ::selection { background: rgb(181, 214, 252); text-shadow: none; }
-#write { margin: 0px auto; height: auto; width: inherit; word-break: normal; word-wrap: break-word; position: relative; padding-bottom: 70px; white-space: pre-wrap; overflow-x: auto; }
-.for-image #write { padding-left: 8px; padding-right: 8px; }
-body.typora-export { padding-left: 30px; padding-right: 30px; }
-@media screen and (max-width: 500px) { 
+<title>个人学习状况总结</title>
+<link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,700,400&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+<style type='text/css'>
+html, body {
+  overflow-x: initial !important;
+}
+html {
+  font-size: 14px;
+  background-color: rgb(255, 255, 255);
+  color: rgb(51, 51, 51);
+}
+body {
+  margin: 0px;
+  padding: 0px;
+  height: auto;
+  bottom: 0px;
+  top: 0px;
+  left: 0px;
+  right: 0px;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 1rem;
+  line-height: 1.42857;
+  overflow-x: hidden;
+  background: inherit;
+}
+a:active, a:hover {
+  outline: 0px;
+}
+.in-text-selection, ::selection {
+  background: rgb(181, 214, 252);
+  text-shadow: none;
+}
+#write {
+  margin: 0px auto;
+  height: auto;
+  width: inherit;
+  word-break: normal;
+  word-wrap: break-word;
+  position: relative;
+  padding-bottom: 70px;
+  white-space: pre-wrap;
+  overflow-x: auto;
+}
+.for-image #write {
+  padding-left: 8px;
+  padding-right: 8px;
+}
+body.typora-export {
+  padding-left: 30px;
+  padding-right: 30px;
+}
+@media screen and (max-width: 500px) {
   body.typora-export { padding-left: 0px; padding-right: 0px; }
   .CodeMirror-sizer { margin-left: 0px !important; }
   .CodeMirror-gutters { display: none !important; }
@@ -17,10 +61,27 @@ body.typora-export { padding-left: 30px; padding-right: 30px; }
 .typora-export #write { margin: 0px auto; }
 #write > p:first-child, #write > ul:first-child, #write > ol:first-child, #write > pre:first-child, #write > blockquote:first-child, #write > div:first-child, #write > table:first-child { margin-top: 30px; }
 #write li > table:first-child { margin-top: -20px; }
-img { max-width: 100%; vertical-align: middle; }
-input, button, select, textarea { color: inherit; font-style: inherit; font-variant: inherit; font-weight: inherit; font-stretch: inherit; font-size: inherit; line-height: inherit; font-family: inherit; }
-input[type="checkbox"], input[type="radio"] { line-height: normal; padding: 0px; }
-::before, ::after, * { box-sizing: border-box; }
+img {
+  max-width: 100%;
+  vertical-align: middle;
+}
+input, button, select, textarea {
+  color: inherit;
+  font-style: inherit;
+  font-variant: inherit;
+  font-weight: inherit;
+  font-stretch: inherit;
+  font-size: inherit;
+  line-height: inherit;
+  font-family: inherit;
+}
+input[type="checkbox"], input[type="radio"] {
+  line-height: normal;
+  padding: 0px;
+}
+::before, ::after, * {
+  box-sizing: border-box;
+}
 #write p, #write h1, #write h2, #write h3, #write h4, #write h5, #write h6, #write div, #write pre { width: inherit; }
 #write p, #write h1, #write h2, #write h3, #write h4, #write h5, #write h6 { position: relative; }
 h1 { font-size: 2rem; }
@@ -29,17 +90,49 @@ h3 { font-size: 1.6rem; }
 h4 { font-size: 1.4rem; }
 h5 { font-size: 1.2rem; }
 h6 { font-size: 1rem; }
-p { -webkit-margin-before: 1rem; -webkit-margin-after: 1rem; -webkit-margin-start: 0px; -webkit-margin-end: 0px; }
-.mathjax-block { margin-top: 0px; margin-bottom: 0px; -webkit-margin-before: 0rem; -webkit-margin-after: 0rem; }
+p {
+  -webkit-margin-before: 1rem;
+  -webkit-margin-after: 1rem;
+  -webkit-margin-start: 0px;
+  -webkit-margin-end: 0px;
+}
+.mathjax-block {
+  margin-top: 0px;
+  margin-bottom: 0px;
+  -webkit-margin-before: 0rem;
+  -webkit-margin-after: 0rem;
+}
 .hidden { display: none; }
-.md-blockmeta { color: rgb(204, 204, 204); font-weight: bold; font-style: italic; }
+.md-blockmeta {
+  color: rgb(204, 204, 204);
+  font-weight: bold;
+  font-style: italic;
+}
 a { cursor: pointer; }
-#write input[type="checkbox"] { cursor: pointer; width: inherit; height: inherit; margin: 4px 0px 0px; }
-tr { break-inside: avoid; break-after: auto; }
+#write input[type="checkbox"] {
+  cursor: pointer;
+  width: inherit;
+  height: inherit;
+  margin: 4px 0px 0px;
+}
+tr {
+  break-inside: avoid;
+  break-after: auto;
+}
 thead { display: table-header-group; }
-table { border-collapse: collapse; border-spacing: 0px; width: 100%; overflow: auto; break-inside: auto; text-align: left; }
+table {
+  border-collapse: collapse;
+  border-spacing: 0px;
+  width: 100%;
+  overflow: auto;
+  break-inside: auto;
+  text-align: left;
+}
 table.md-table td { min-width: 80px; }
-.CodeMirror-gutters { border-right: 0px; background-color: inherit; }
+.CodeMirror-gutters {
+  border-right: 0px;
+  background-color: inherit;
+}
 .CodeMirror { text-align: left; }
 .CodeMirror-placeholder { opacity: 0.3; }
 .CodeMirror pre { padding: 0px 4px; }
@@ -47,7 +140,16 @@ table.md-table td { min-width: 80px; }
 div.hr:focus { cursor: none; }
 pre { white-space: pre-wrap; }
 .CodeMirror-gutters { margin-right: 4px; }
-.md-fences { font-size: 0.9rem; display: block; break-inside: avoid; text-align: left; overflow: visible; white-space: pre; background: inherit; position: relative !important; }
+.md-fences {
+  font-size: 0.9rem;
+  display: block;
+  break-inside: avoid;
+  text-align: left;
+  overflow: visible;
+  white-space: pre;
+  background: inherit;
+  position: relative !important;
+}
 .md-diagram-panel { width: 100%; margin-top: 10px; text-align: center; padding-top: 0px; padding-bottom: 8px; overflow-x: auto; }
 .md-fences .CodeMirror.CodeMirror-wrap { top: -1.6em; margin-bottom: -1.6em; }
 .md-fences.mock-cm { white-space: pre-wrap; }
@@ -63,7 +165,7 @@ li { margin: 0px; position: relative; }
 blockquote > :last-child { margin-bottom: 0px; }
 blockquote > :first-child { margin-top: 0px; }
 .footnotes-area { color: rgb(136, 136, 136); margin-top: 0.714rem; padding-bottom: 0.143rem; }
-@media print { 
+@media print {
   html, body { height: 100%; }
   .typora-export * { -webkit-print-color-adjust: exact; }
   h1, h2, h3, h4, h5, h6 { break-after: avoid-page; orphans: 2; }
@@ -98,7 +200,7 @@ p + .mathjax-block { margin-top: -1.143rem; }
 .md-toc-h4 .md-toc-inner { margin-left: 6em; }
 .md-toc-h5 .md-toc-inner { margin-left: 8em; }
 .md-toc-h6 .md-toc-inner { margin-left: 10em; }
-@media screen and (max-width: 48em) { 
+@media screen and (max-width: 48em) {
   .md-toc-h3 .md-toc-inner { margin-left: 3.5em; }
   .md-toc-h4 .md-toc-inner { margin-left: 5em; }
   .md-toc-h5 .md-toc-inner { margin-left: 6.5em; }
@@ -176,9 +278,9 @@ table tr th:last-child, table tr td:last-child { margin-bottom: 0px; }
 .task-list { padding-left: 0px; }
 .task-list-item { padding-left: 32px; }
 .task-list-item input { top: 3px; left: 8px; }
-@media screen and (min-width: 914px) { 
+@media screen and (min-width: 914px) {
 }
-@media print { 
+@media print {
   html { font-size: 13px; }
   table, pre { break-inside: avoid; }
   pre { word-wrap: break-word; }
@@ -207,6 +309,35 @@ header, .context-menu, .megamenu-content, footer { font-family: "Segoe UI", Aria
 </style>
 </head>
 <body class='typora-export' >
-<div  id='write'  class = 'is-node'><h1><a name='header-c76' class='md-header-anchor '></a>个人当前学习状况总结——最近一次更新于2017年5月3日</h1><p>个人目前大二，专业是应用统计学，由于是数学科学学院开的专业，所以学的很多是关于计算的知识。大一的时候的数学分析、高等代数、解析几何还有现在的实变函数、概率论、数理统计。中间也开设了一些经济学的课程，像是微观经济学、经济预测与决策以及下学期要开的计量经济学。但由于老师是数院出身，课程对于计算的内容有很多的侧重。</p><p>编程方面，大一下学期开了一门C语言的课程。自此便对编程产生了一种狂热的兴趣，大二上学期开了MATLAB的课，下学期又开了VB。由于自己的兴趣以及自己对专业的了解，还自学了R、Python等编程语言，对前端开发也有一定了解，掌握Linux的基本操作。这学期选了学SAS的跨专业课。但是由于没有经过系统的学习，对于一些较为底层的原理一窍不通。</p><p>近一年来自学了很多东西，然而最近开始觉得自学变得有些吃力，特地在此整理一下自身的学习状况，以便决定进一步的学习方向，进行更加深入的学习。</p><h2><a name='header-c84' class='md-header-anchor '></a>1. 关于统计软件的学习</h2><p>这里所说的统计软件主要包括R、SAS以及Python的一些科学计算、数据处理、机器学习、数据可视化的第三方库。</p><h3><a name='header-c87' class='md-header-anchor '></a>R</h3><p>通过书籍来学习，前前后后翻了很多R书，最开始看了R实战，后来又看了一些R cookbook之类的书。但是由于统计学的理论知识还没学到位，在学习R的各种统计方法的实现时，有过一段时间的暂停。</p><p>目前掌握的情况：数据结构、语法、以及一些简单的回归分析、假设检验、参数估计方法的R实现</p><h3><a name='header-c92' class='md-header-anchor '></a>Python</h3><p>利用寒假时间在家里对Python有了初步的了解，再加上学了计科的一门Python课，对Python有了一定的掌握。</p><p>目前掌握的情况：语法、数据结构、以及基础网络数据采集、基本的GUI编程、还有科学计算库Numpy、Scipy以及可视化库Matplotlib</p><h3><a name='header-c97' class='md-header-anchor '></a>SAS</h3><p>关于SAS的学习完全是因为很多大企业依然坚持使用SAS来做数据分析和挖掘。选了经济学院一个老师的SAS课，老师课件做得很棒，给我的学习带来很多便利。</p><p>目前掌握的情况：数据读入、数据管理（SQL）、一些常用的过程步</p><h2><a name='header-c102' class='md-header-anchor '></a>2.前端知识的学习</h2><p>这个完全是出于爱好，由于本人在校级组织的宣传部任副部长，所以在大一下学期曾经花过很多时间来自学PS，再加上在工作中的磨砺，我相信自己对PS有一定的了解。而作为设计人员来说，很多时候常常也会接触到网页设计那些东西，再加上大一的计算机基础课上曾经学过如何用Dreamweaver来制作网页（虽然我还是喜欢码代码）。最最重要的是，我想给自己写一个装X的个人主页。。。</p><p>目前的掌握情况：HTML、CSS(基础)、JavaScript（利用bootstrap写过一个用来秀恩爱的静态小网页，放在我的GitHub pages上）</p><h2><a name='header-c107' class='md-header-anchor '></a>3.用于科学计算的软件的学习</h2><h3><a name='header-c108' class='md-header-anchor '></a>MATLAB</h3><p>MATLAB的学习开始于大二上学期，由于大一下学期的C语言的学习让我对编程产生了浓厚的兴趣，我在MATLAB的学习上也付出了很大的努力。在大二上学期的国庆节假期便提前把课本上的内容全部自行学习了一遍，虽然印象不够深，但是这给我接下来的课程学习带来了很大的便利。后来又从图书馆借了几本关于用MATLAB进行科学计算的书来学习。</p><p>这学期（大二下学期）打算参加数学建模比赛，在培训课程中更进一步加深了对MATLAB的学习。</p><p>目前的掌握情况：语法及数据结构、数值微分、插值、拟合、画图、符号运算</p><h2><a name='header-c115' class='md-header-anchor '></a>4.通用技术的学习</h2><p>大二的寒假学习了很多知识。首先是学习R，后来由于了解到行业的新趋势，开始学习Python，由于个人的兴趣以及为了工作环境的搭建，学习了Linux并掌握基本操作。</p><p>我觉得在这个过程中，我最大的收获是学习能力的培养。我学会找相关资料，学会在论坛上上提问，学会使GitHub，学会用Markdown写东西，还学了网页设计的基础知识。</p><h2><a name='header-c120' class='md-header-anchor '></a>总结：</h2><p>涉及面广，但是真正有所成的只有MATLAB。。。</p><h2><a name='header-c123' class='md-header-anchor '></a>下一步：</h2><blockquote><p>学习大数据相关的知识，或者将R、Python深入学习？</p></blockquote></div>
+<div  id='write'  class = 'is-node'><h1><a name='header-c76' class='md-header-anchor '></a>个人当前学习状况总结——最近一次更新于2017年5月3日</h1>
+  <p>个人目前大二，专业是应用统计学，由于是数学科学学院开的专业，所以学的很多是关于计算的知识。大一的时候的数学分析、高等代数、解析几何还有现在的实变函数、概率论、数理统计。中间也开设了一些经济学的课程，像是微观经济学、经济预测与决策以及下学期要开的计量经济学。但由于老师是数院出身，课程对于计算的内容有很多的侧重。</p>
+  <p>编程方面，大一下学期开了一门C语言的课程。自此便对编程产生了一种狂热的兴趣，大二上学期开了MATLAB的课，下学期又开了VB。由于自己的兴趣以及自己对专业的了解，还自学了R、Python等编程语言，对前端开发也有一定了解，掌握Linux的基本操作。这学期选了学SAS的跨专业课。但是由于没有经过系统的学习，对于一些较为底层的原理一窍不通。</p>
+  <p>近一年来自学了很多东西，然而最近开始觉得自学变得有些吃力，特地在此整理一下自身的学习状况，以便决定进一步的学习方向，进行更加深入的学习。</p>
+  <h2><a name='header-c84' class='md-header-anchor '></a>1. 关于统计软件的学习</h2>
+  <p>这里所说的统计软件主要包括R、SAS以及Python的一些科学计算、数据处理、机器学习、数据可视化的第三方库。</p>
+  <h3><a name='header-c87' class='md-header-anchor '></a>R</h3>
+  <p>通过书籍来学习，前前后后翻了很多R书，最开始看了R实战，后来又看了一些R cookbook之类的书。但是由于统计学的理论知识还没学到位，在学习R的各种统计方法的实现时，有过一段时间的暂停。</p>
+  <p>目前掌握的情况：数据结构、语法、以及一些简单的回归分析、假设检验、参数估计方法的R实现</p>
+  <h3><a name='header-c92' class='md-header-anchor '></a>Python</h3>
+  <p>利用寒假时间在家里对Python有了初步的了解，再加上学了计科的一门Python课，对Python有了一定的掌握。</p>
+  <p>目前掌握的情况：语法、数据结构、以及基础网络数据采集、基本的GUI编程、还有科学计算库Numpy、Scipy以及可视化库Matplotlib</p>
+  <h3><a name='header-c97' class='md-header-anchor '></a>SAS</h3>
+  <p>关于SAS的学习完全是因为很多大企业依然坚持使用SAS来做数据分析和挖掘。选了经济学院一个老师的SAS课，老师课件做得很棒，给我的学习带来很多便利。</p>
+  <p>目前掌握的情况：数据读入、数据管理（SQL）、一些常用的过程步</p>
+  <h2><a name='header-c102' class='md-header-anchor '></a>2.前端知识的学习</h2>
+  <p>这个完全是出于爱好，由于本人在校级组织的宣传部任副部长，所以在大一下学期曾经花过很多时间来自学PS，再加上在工作中的磨砺，我相信自己对PS有一定的了解。而作为设计人员来说，很多时候常常也会接触到网页设计那些东西，再加上大一的计算机基础课上曾经学过如何用Dreamweaver来制作网页（虽然我还是喜欢码代码）。最最重要的是，我想给自己写一个装X的个人主页。。。</p>
+  <p>目前的掌握情况：HTML、CSS(基础)、JavaScript（利用bootstrap写过一个用来秀恩爱的静态小网页，放在我的GitHub pages上）</p>
+  <h2><a name='header-c107' class='md-header-anchor '></a>3.用于科学计算的软件的学习</h2>
+  <h3><a name='header-c108' class='md-header-anchor '></a>MATLAB</h3>
+  <p>MATLAB的学习开始于大二上学期，由于大一下学期的C语言的学习让我对编程产生了浓厚的兴趣，我在MATLAB的学习上也付出了很大的努力。在大二上学期的国庆节假期便提前把课本上的内容全部自行学习了一遍，虽然印象不够深，但是这给我接下来的课程学习带来了很大的便利。后来又从图书馆借了几本关于用MATLAB进行科学计算的书来学习。</p>
+  <p>这学期（大二下学期）打算参加数学建模比赛，在培训课程中更进一步加深了对MATLAB的学习。</p>
+  <p>目前的掌握情况：语法及数据结构、数值微分、插值、拟合、画图、符号运算</p>
+  <h2><a name='header-c115' class='md-header-anchor '></a>4.通用技术的学习</h2>
+  <p>大二的寒假学习了很多知识。首先是学习R，后来由于了解到行业的新趋势，开始学习Python，由于个人的兴趣以及为了工作环境的搭建，学习了Linux并掌握基本操作。</p>
+  <p>我觉得在这个过程中，我最大的收获是学习能力的培养。我学会找相关资料，学会在论坛上上提问，学会使GitHub，学会用Markdown写东西，还学了网页设计的基础知识。</p>
+  <h2><a name='header-c120' class='md-header-anchor '></a>总结：</h2>
+  <p>涉及面广，但是真正有所成的只有MATLAB。。。</p>
+  <h2><a name='header-c123' class='md-header-anchor '></a>下一步：</h2>
+  <blockquote><p>学习大数据相关的知识，或者将R、Python深入学习？</p></blockquote></div>
 </body>
 </html>
