--- a/math_model.html
+++ b/math_model.html
@@ -39,7 +39,7 @@
     </div>
     <div class="col-md-5 col-md-offset-2">
       <ul>
-        <li><a href="./MATLAB/dsovle.html">MATLAB求解微分方程</a></li>
+        <li><a href="./MATLAB/matlab_curvefit.html">MATLAB数据拟合</a></li>
       </ul>
     </div>
   </div>
