--- a/math_model.html
+++ b/math_model.html
@@ -27,7 +27,8 @@
 		<ul class="nav navbar-nav">
 			<li class="active"><a href="#matlab"  data-toggle="tab">MATLAB</a></li>
 			<li><a href="#R"  data-toggle="tab">R</a></li>
-			<li><a href="#other"  data-toggle="tab">其他</li>
+      <li><a href="#Python" data-toggle="tab">Python</a></li>
+			<li><a href="#other"  data-toggle="tab">其他</a></li>
 		</ul>
 	</div>
 	</div>
@@ -35,7 +36,7 @@
 <div class="tab-content">
   <div class="row tab-pane fade in active" id="matlab">
     <div class="col-md-4 well">
-      <h2 style="text-align: center; color: black;">MATLAB</h2>
+      <h2 style="text-align:center;">MATLAB</h2>
     </div>
     <div class="col-md-5 col-md-offset-2">
       <ul>
@@ -46,13 +47,32 @@
   <div class="row tab-pane fade" id="R">
     <div class="col-md-4 well">
       <h2 style="text-align: center;">R</h2>
-      <a href=""></a>
+    </div>
+    <div class="col-md-5 col-md-offset-2">
+      <ul>
+        <li><a href="./R/R_regress.html">R回归分析</a></li>
+      </ul>
+    </div>
+  </div>
+  <div class="row tab-pane fade" id="Python">
+    <div class="col-md-4 well">
+      <h2 style="text-align: center;">Python</h2>
+    </div>
+    <div class="col-md-5 col-md-offset-2">
+      <ul>
+        <li><a href="./Python/Python期末选题.html">Python期末选题</a></li>
+        <li><a href="./Python/Python学习笔记.html">Python学习笔记</a></li>
+      </ul>
     </div>
   </div>
   <div class="row tab-pane fade" id="other">
     <div class="col-md-4 well">
       <h2 style="text-align: center;">其他</h2>
-      <a href=""></a>
+    </div>
+    <div class="col-md-5 col-md-offset-2">
+      <ul>
+        <li><a href="./R_regress.html">R回归分析</a></li>
+      </ul>
     </div>
   </div>
 </div>
