--- a/math_model.html
+++ b/math_model.html
@@ -35,30 +35,31 @@
 </nav>
 <div class="tab-content">
   <div class="row tab-pane fade in active" id="matlab">
-    <div class="col-md-4 well">
-      <h2 style="text-align:center;">MATLAB</h2>
+    <div class="col-md-4 col-md-offset-1 well">
+      <img src="./MATLAB_logo.jpg" class="img-rounded img-responsive">
     </div>
-    <div class="col-md-5 col-md-offset-2">
+    <div class="col-md-4 col-md-offset-1 well">
       <ul>
         <li><a href="./MATLAB/matlab_curvefit.html">MATLAB数据拟合</a></li>
+        <li><a href="./MATLAB/matlab_symbols.html">MATLAB符号运算</a></li>
       </ul>
     </div>
   </div>
   <div class="row tab-pane fade" id="R">
-    <div class="col-md-4 well">
-      <h2 style="text-align: center;">R</h2>
+    <div class="col-md-4 col-md-offset-1 well">
+      <img src="./R_logo.jpg" class="img-rounded img-responsive">
     </div>
-    <div class="col-md-5 col-md-offset-2">
+    <div class="col-md-4 col-md-offset-1 well">
       <ul>
         <li><a href="./R/R_regress.html">R回归分析</a></li>
       </ul>
     </div>
   </div>
   <div class="row tab-pane fade" id="Python">
-    <div class="col-md-4 well">
-      <h2 style="text-align: center;">Python</h2>
+    <div class="col-md-4 col-md-offset-1 well">
+      <img src="./Python_logo.jpg" class="img-rounded img-responsive">
     </div>
-    <div class="col-md-5 col-md-offset-2">
+    <div class="col-md-3 col-md-offset-1 well">
       <ul>
         <li><a href="./Python/Python期末选题.html">Python期末选题</a></li>
         <li><a href="./Python/Python学习笔记.html">Python学习笔记</a></li>
