--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
   <script src="./bootstrap-3.3.7/js/bootstrap.min.js"></script>
   <style rel="text/css">
   #head{
-    background: black;
+    background-color: #1E90FF ;
     margin-bottom: 20px;
   }
   #dropdownMenu1{
     background: none;
     color: white;
+    font-size: 18px;
   }
   .row{
     margin-bottom: 40px;
@@ -39,10 +40,7 @@
               <a role="menuitem" tabindex="-1" href="./me.html">个人学习心得</a>
           </li>
           <li role="presentation">
-              <a role="menuitem" tabindex="-1" href="./we.html"><em>love</em></a>
-          </li>
-          <li role="presentation">
-              <a role="menuitem" tabindex="-1" href="./Python期末选题.html">Python期末选题</a>
+              <a role="menuitem" tabindex="-1" href="./we.html">love</a>
           </li>
           <li role="presentation" class="divider"></li>
           <li role="presentation">
@@ -57,29 +55,47 @@
   </div>
 </div>
 <div class="row">
-  <img src="./R_logo.jpg" class="col-md-4 col-md-offset-1 img-rounded img-responsive">
-  <div class="col-md-4 col-md-offset-1">
-    <blockquote class="pull-right">
-        <h3>R语言</h3>
-        <p class="firstp">作为统计学人的标配，R语言在相对较小的数据量下可以提供一整套的数据分析的功能。由于R是开源的，
-          有数以千计的程序包可供选择，可以应对数据处理的复杂工作
-        </p>
-        <small><a href="./me.html">我的学习总结</a></small>
-    </blockquote>
+  <div class="col-sm-12 col-md-3 col-md-offset-2">
+        <div class="thumbnail">
+            <img src="./studying.jpg" class="img-responsive">
+        </div>
+        <div class="well">
+          <ul>
+            <li><a href="./MATLAB/matlab_curvefit.html">MATLAB数据拟合</a></li>
+            <li><a href="./MATLAB/matlab_symbols.html">MATLAB符号运算</a></li>
+            <li><a href="./R/R_regress.html">R语言回归分析</a></li>
+            <li><a href="./Python/Python期末选题.html">Python跨专业课期末选题</a></li>
+            <li><a href="./Python/Python学习笔记.html">Python学习笔记</a></li>
+          </ul>
+        </div>
+  </div>
+  <div class="col-md-6">
+    <div>
+      <img src="./R_logo.jpg" class="col-md-6 img-rounded img-responsive">
+      <div class="col-md-6">
+        <blockquote class="pull-right">
+            <h3>R语言</h3>
+            <p class="firstp">作为统计学人的标配，R语言在相对较小的数据量下可以提供一整套的数据分析的功能。由于R是开源的，
+              有数以千计的程序包可供选择，可以应对数据处理的复杂工作
+            </p>
+        </blockquote>
+      </div>
+    </div>
+    <div>
+      <img src="./Python_logo.jpg" class="col-md-6 img-rounded img-responsive">
+      <div class="col-md-6">
+        <blockquote class="pull-right">
+            <h3>Python</h3>
+            <p class="firstp">一门简单易学的编程语言，由于它的易学以及开源，获得了大量的拥护者，从而有最为活跃的开源社区。在此基础上
+              ，大大拓展了它的应用范围。几乎无所不能。
+            </p>
+        </blockquote>
+      </div>
+    </div>
   </div>
 </div>
-<div class="row">
-  <img src="./Python_logo.jpg" class="col-md-4 col-md-offset-1 img-rounded img-responsive">
-  <div class="col-md-4 col-md-offset-1">
-    <blockquote class="pull-right">
-        <h3>Python</h3>
-        <p class="firstp">一门简单易学的编程语言，由于它的易学以及开源，获得了大量的拥护者，从而有最为活跃的开源社区。在此基础上
-          ，大大拓展了它的应用范围。几乎无所不能。
-        </p>
-        <small><a href="./me.html">我的学习总结</a></small>
-        <small><a href="./Python期末选题.html">大二下Python跨专业课期末选题</a></small>
-    </blockquote>
-  </div>
-</div>
+<footer style="text-align: center;">
+  <em><small>Developed By LiHao</em></small>
+</footer>
 </body>
 </html>
