--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
             <li><a href="./MATLAB/matlab_curvefit.html">MATLAB数据拟合</a></li>
             <li><a href="./MATLAB/matlab_symbols.html">MATLAB符号运算</a></li>
             <li><a href="./R/R_regress.html">R语言回归分析</a></li>
+            <li><a href="./MATLAB/组合投资模型.html">组合投资模型</a></li>
             <li><a href="./Python/Python期末选题.html">Python跨专业课期末选题</a></li>
             <li><a href="./Python/Python学习笔记.html">Python学习笔记</a></li>
           </ul>
