--- a/index.html
+++ b/index.html
@@ -57,22 +57,22 @@
 <div class="row">
   <div class="col-sm-12 col-md-3 col-md-offset-2">
         <div class="thumbnail">
-            <img src="./studying.jpg" class="img-responsive">
+            <img src="./picture/studying.jpg" class="img-responsive">
         </div>
         <div class="well">
           <ul>
             <li><a href="./MATLAB/matlab_curvefit.html">MATLAB数据拟合</a></li>
             <li><a href="./MATLAB/matlab_symbols.html">MATLAB符号运算</a></li>
-            <li><a href="./R/R_regress.html">R语言回归分析</a></li>
             <li><a href="./MATLAB/组合投资模型.html">组合投资模型</a></li>
             <li><a href="./Python/Python期末选题.html">Python跨专业课期末选题</a></li>
             <li><a href="./Python/Python学习笔记.html">Python学习笔记</a></li>
+            <li><a href="./MATLAB/matlab_ds.html">MATLAB微分方程求解（未定稿）</a></li>
           </ul>
         </div>
   </div>
   <div class="col-md-6">
-    <div>
-      <img src="./R_logo.jpg" class="col-md-6 img-rounded img-responsive">
+    <div class="row">
+      <img src="./picture/R_logo.jpg" class="col-md-6 img-rounded img-responsive">
       <div class="col-md-6">
         <blockquote class="pull-right">
             <h3>R语言</h3>
@@ -82,13 +82,35 @@
         </blockquote>
       </div>
     </div>
-    <div>
-      <img src="./Python_logo.jpg" class="col-md-6 img-rounded img-responsive">
+    <div class="row">
+      <img src="./picture/Python_logo.jpg" class="col-md-6 img-rounded img-responsive">
       <div class="col-md-6">
         <blockquote class="pull-right">
             <h3>Python</h3>
             <p class="firstp">一门简单易学的编程语言，由于它的易学以及开源，获得了大量的拥护者，从而有最为活跃的开源社区。在此基础上
               ，大大拓展了它的应用范围。几乎无所不能。
+            </p>
+        </blockquote>
+      </div>
+    </div>
+    <div class="row">
+      <img src="./picture/Linux_logo.jpg" class="col-md-6 img-rounded img-responsive">
+      <div class="col-md-6">
+        <blockquote class="pull-right">
+            <h3>Linux</h3>
+            <p class="firstp">Linux是一个类Unix系统，或者说一类系统的合称，它开源、强大、安全，有着众多的粉丝。
+              如果说Windows占领了桌面，那么Linux就占领了服务器。
+            </p>
+        </blockquote>
+      </div>
+    </div>
+    <div class="row">
+      <img src="./picture/MATLAB_logo.jpg" class="col-md-6 img-rounded img-responsive">
+      <div class="col-md-6">
+        <blockquote class="pull-right">
+            <h3>MATLAB</h3>
+            <p class="firstp">科学计算软件，全面而又强大的功能使得其在科学计算领域经久不衰，后来的各种编程语言或者软件对科学计算的支持大都
+              参考了它。
             </p>
         </blockquote>
       </div>
