--- a/math_model.html
+++ b/math_model.html
@@ -36,28 +36,29 @@
 <div class="tab-content">
   <div class="row tab-pane fade in active" id="matlab">
     <div class="col-md-4 col-md-offset-1 well">
-      <img src="./MATLAB_logo.jpg" class="img-rounded img-responsive">
+      <img src="./picture/MATLAB_logo.jpg" class="img-rounded img-responsive">
     </div>
     <div class="col-md-4 col-md-offset-1 well">
       <ul>
         <li><a href="./MATLAB/matlab_curvefit.html">MATLAB数据拟合</a></li>
         <li><a href="./MATLAB/matlab_symbols.html">MATLAB符号运算</a></li>
+        <li><a href="./MATLAB/组合投资模型.html">组合投资模型</a></li>
+        <li><a href="./MATLAB/matlab_ds.html">MATALB微分方程求解</a></li>
       </ul>
     </div>
   </div>
   <div class="row tab-pane fade" id="R">
     <div class="col-md-4 col-md-offset-1 well">
-      <img src="./R_logo.jpg" class="img-rounded img-responsive">
+      <img src="./picture/R_logo.jpg" class="img-rounded img-responsive">
     </div>
     <div class="col-md-4 col-md-offset-1 well">
       <ul>
-        <li><a href="./R/R_regress.html">R回归分析</a></li>
       </ul>
     </div>
   </div>
   <div class="row tab-pane fade" id="Python">
     <div class="col-md-4 col-md-offset-1 well">
-      <img src="./Python_logo.jpg" class="img-rounded img-responsive">
+      <img src="./picture/Python_logo.jpg" class="img-rounded img-responsive">
     </div>
     <div class="col-md-3 col-md-offset-1 well">
       <ul>
@@ -72,7 +73,6 @@
     </div>
     <div class="col-md-5 col-md-offset-2">
       <ul>
-        <li><a href="./R_regress.html">R回归分析</a></li>
       </ul>
     </div>
   </div>
