--- a/we.html
+++ b/we.html
@@ -56,16 +56,16 @@
             <!-- 轮播（Carousel）项目 -->
             <div class="carousel-inner">
                 <div class="item active">
-                    <img src="./罗小黑.jpg" alt="First slide">
+                    <img src="./picture/罗小黑.jpg" alt="First slide">
                 </div>
                 <div class="item">
-                    <img src="./李小钊.jpg" alt="Second slide">
+                    <img src="./picture/李小钊.jpg" alt="Second slide">
                 </div>
                 <div class="item">
-                    <img src="./傻狍子.jpg" alt="Third slide">
+                    <img src="./picture/傻狍子.jpg" alt="Third slide">
                 </div>
                 <div class="item">
-                    <img src="./两小无猜.jpg" alt="4th slide">
+                    <img src="./picture/两小无猜.jpg" alt="4th slide">
                 </div>
             </div>
             <!-- 轮播（Carousel）导航 -->
@@ -100,7 +100,7 @@
         <div class="row">
           <div class="col-sm-12 col-md-3" id="xiaomianao">
                 <div class="thumbnail">
-                    <img src="./傻狍子.jpg" class="img-responsive">
+                    <img src="./picture/傻狍子.jpg" class="img-responsive">
                     <div class="caption">
                         <h3>傻狍子</h3>
                         <p class="firstp"><q>世人笑我太疯癫，我笑他人看不穿。</q>咳咳，傻怎么了，怪我占了你天下第一傻的位子吗？哼哼~</p>
@@ -118,7 +118,7 @@
         <div class="row">
           <div class="col-sm-12 col-md-3">
               <div class="thumbnail">
-                  <img src="./李小钊.jpg" class="img-responsive"
+                  <img src="./picture/李小钊.jpg" class="img-responsive"
                        alt="通用的占位符缩略图">
                   <div class="caption">
                       <h3>李小钊</h3>
@@ -133,7 +133,7 @@
           </div>
           <div class="col-sm-12 col-md-3">
              <div class="thumbnail">
-                 <img src="./两小无猜.jpg" class="img-responsive">
+                 <img src="./picture/两小无猜.jpg" class="img-responsive">
                  <div class="caption">
                      <h3>小棉袄</h3>
                      <p class="firstp">你送我吃的，给我买药，你是我的小棉袄。你可能不知道，我也可能不知道。。。公元2016年11月10日，方圆十里最大的流氓栽在我手里。</p>
@@ -151,7 +151,7 @@
         <div class="row">
           <div class="col-sm-12 col-md-3">
               <div class="thumbnail">
-                  <img src="./罗小黑.jpg" class="img-responsive">
+                  <img src="./picture/罗小黑.jpg" class="img-responsive">
                   <div class="caption">
                       <h3>罗小黑</h3>
                       <p class="firstp">能找到一个有共同爱好的人是那么的不容易，更何况我恰巧那么在乎你，一个人出生在这个世界上大概是来受罪的，如果是这样，我非要上帝在你身上尝尝失败的滋味。李小钊同志，我喜欢你，想要你做我媳妇的那种喜欢。</p>
