--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
                     initial-scale=1,
                     maximum-scale=1,">
   <title>李浩的个人主页</title>
-  <link rel="stylesheet" href="./bootstrap-3.3.7/css/bootstrap.min.css">
+  <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
-  <script src="./bootstrap-3.3.7/js/bootstrap.min.js"></script>
+  <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <style rel="text/css">
   #head{
     background-color: #1E90FF ;
