--- a/math_model.html
+++ b/math_model.html
@@ -6,9 +6,9 @@
                                   initial-scale=1,
                                   maxinum-scale=1">
   <title>数学建模相关技能学习及总结</title>
-  <link rel="stylesheet" href="./bootstrap-3.3.7/css/bootstrap.min.css">
+  <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
-  <script src="./bootstrap-3.3.7/js/bootstrap.min.js"></script>
+  <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
   <nav class="navbar navbar-default" role="navigation">
