--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
     font-size: 35px;
     margin-bottom: 30px;
   }
+  .instead-picture{
+    height: 300px;
+    width:300px;
+  }
   </style>
 </head>
 <body>
@@ -70,10 +74,10 @@
           </ul>
         </div>
   </div>
-  <div class="col-md-6">
+  <div class="col-md-5">
     <div class="row">
-      <img src="./picture/R_logo.jpg" class="col-md-6 img-rounded img-responsive">
-      <div class="col-md-6">
+        <h1 style="text-align: center; padding: 70px; background-color:rgba(255,0,0,0.5);">R</h1>
+      <div>
         <blockquote class="pull-right">
             <h3>R语言</h3>
             <p class="firstp">作为统计学人的标配，R语言在相对较小的数据量下可以提供一整套的数据分析的功能。由于R是开源的，
@@ -83,8 +87,8 @@
       </div>
     </div>
     <div class="row">
-      <img src="./picture/Python_logo.jpg" class="col-md-6 img-rounded img-responsive">
-      <div class="col-md-6">
+        <h1 style="text-align: center; padding: 70px; background-color:rgba(10,255,0,0.5);">Python</h1>
+      <div>
         <blockquote class="pull-right">
             <h3>Python</h3>
             <p class="firstp">一门简单易学的编程语言，由于它的易学以及开源，获得了大量的拥护者，从而有最为活跃的开源社区。在此基础上
@@ -94,8 +98,8 @@
       </div>
     </div>
     <div class="row">
-      <img src="./picture/Linux_logo.jpg" class="col-md-6 img-rounded img-responsive">
-      <div class="col-md-6">
+        <h1 style="text-align: center; padding: 70px; background-color:rgba(0,0,200,0.5);">Linux</h1>
+      <div>
         <blockquote class="pull-right">
             <h3>Linux</h3>
             <p class="firstp">Linux是一个类Unix系统，或者说一类系统的合称，它开源、强大、安全，有着众多的粉丝。
@@ -105,8 +109,8 @@
       </div>
     </div>
     <div class="row">
-      <img src="./picture/MATLAB_logo.jpg" class="col-md-6 img-rounded img-responsive">
-      <div class="col-md-6">
+        <h1 style="text-align: center; padding: 70px; background-color:rgba(0,0,0,0.5);">MATLAB</h1>
+      <div>
         <blockquote class="pull-right">
             <h3>MATLAB</h3>
             <p class="firstp">科学计算软件，全面而又强大的功能使得其在科学计算领域经久不衰，后来的各种编程语言或者软件对科学计算的支持大都
