--- a/math_model.html
+++ b/math_model.html
@@ -35,8 +35,8 @@
 </nav>
 <div class="tab-content">
   <div class="row tab-pane fade in active" id="matlab">
-    <div class="col-md-4 col-md-offset-1 well">
-      <img src="./picture/MATLAB_logo.jpg" class="img-rounded img-responsive">
+    <div class="col-md-4 col-md-offset-1">
+      <h1 style="text-align: center; padding: 100px; background-color:rgba(0,0,0,0.5);">MATLAB</h1>
     </div>
     <div class="col-md-4 col-md-offset-1 well">
       <ul>
@@ -48,8 +48,8 @@
     </div>
   </div>
   <div class="row tab-pane fade" id="R">
-    <div class="col-md-4 col-md-offset-1 well">
-      <img src="./picture/R_logo.jpg" class="img-rounded img-responsive">
+    <div class="col-md-4 col-md-offset-1">
+      <h1 style="text-align: center; padding: 100px; background-color:rgba(255,0,0,0.5);">R</h1>
     </div>
     <div class="col-md-4 col-md-offset-1 well">
       <ul>
@@ -57,8 +57,8 @@
     </div>
   </div>
   <div class="row tab-pane fade" id="Python">
-    <div class="col-md-4 col-md-offset-1 well">
-      <img src="./picture/Python_logo.jpg" class="img-rounded img-responsive">
+    <div class="col-md-4 col-md-offset-1">
+      <h1 style="text-align: center; padding: 100px; background-color:rgba(10,255,0,0.5);">Python</h1>
     </div>
     <div class="col-md-3 col-md-offset-1 well">
       <ul>
@@ -68,8 +68,8 @@
     </div>
   </div>
   <div class="row tab-pane fade" id="other">
-    <div class="col-md-4 well">
-      <h2 style="text-align: center;">其他</h2>
+    <div class="col-md-4 col-md-offset-1">
+      <h1 style="text-align: center; padding: 100px; background-color:rgba(10,255,0,0.5);">其他</h1>
     </div>
     <div class="col-md-5 col-md-offset-2">
       <ul>
