--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
     height: 300px;
     width:300px;
   }
+  .firstp{
+    padding:0 20px;
+  }
   </style>
 </head>
 <body>
@@ -77,10 +80,10 @@
   <div class="col-md-5">
     <div class="row">
         <h1 style="text-align: center; padding: 70px; background-color:rgba(255,0,0,0.5);">R</h1>
-      <div>
+      <div class="firstp">
         <blockquote class="pull-right">
             <h3>R语言</h3>
-            <p class="firstp">作为统计学人的标配，R语言在相对较小的数据量下可以提供一整套的数据分析的功能。由于R是开源的，
+            <p>作为统计学人的标配，R语言在相对较小的数据量下可以提供一整套的数据分析的功能。由于R是开源的，
               有数以千计的程序包可供选择，可以应对数据处理的复杂工作
             </p>
         </blockquote>
@@ -88,10 +91,10 @@
     </div>
     <div class="row">
         <h1 style="text-align: center; padding: 70px; background-color:rgba(10,255,0,0.5);">Python</h1>
-      <div>
+      <div class="firstp">
         <blockquote class="pull-right">
             <h3>Python</h3>
-            <p class="firstp">一门简单易学的编程语言，由于它的易学以及开源，获得了大量的拥护者，从而有最为活跃的开源社区。在此基础上
+            <p>一门简单易学的编程语言，由于它的易学以及开源，获得了大量的拥护者，从而有最为活跃的开源社区。在此基础上
               ，大大拓展了它的应用范围。几乎无所不能。
             </p>
         </blockquote>
@@ -99,10 +102,10 @@
     </div>
     <div class="row">
         <h1 style="text-align: center; padding: 70px; background-color:rgba(0,0,200,0.5);">Linux</h1>
-      <div>
+      <div class="firstp">
         <blockquote class="pull-right">
             <h3>Linux</h3>
-            <p class="firstp">Linux是一个类Unix系统，或者说一类系统的合称，它开源、强大、安全，有着众多的粉丝。
+            <p>Linux是一个类Unix系统，或者说一类系统的合称，它开源、强大、安全，有着众多的粉丝。
               如果说Windows占领了桌面，那么Linux就占领了服务器。
             </p>
         </blockquote>
@@ -110,10 +113,10 @@
     </div>
     <div class="row">
         <h1 style="text-align: center; padding: 70px; background-color:rgba(0,0,0,0.5);">MATLAB</h1>
-      <div>
+      <div class="firstp">
         <blockquote class="pull-right">
             <h3>MATLAB</h3>
-            <p class="firstp">科学计算软件，全面而又强大的功能使得其在科学计算领域经久不衰，后来的各种编程语言或者软件对科学计算的支持大都
+            <p>科学计算软件，全面而又强大的功能使得其在科学计算领域经久不衰，后来的各种编程语言或者软件对科学计算的支持大都
               参考了它。
             </p>
         </blockquote>
