--- a/index.html
+++ b/index.html
@@ -44,12 +44,8 @@
       </button>
       <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
           <li role="presentation">
-              <a role="menuitem" tabindex="-1" href="./me.html">个人学习心得</a>
-          </li>
-          <li role="presentation">
               <a role="menuitem" tabindex="-1" href="./we.html">love</a>
           </li>
-          <li role="presentation" class="divider"></li>
           <li role="presentation">
               <a role="menuitem" tabindex="-1" href="./math_model.html">数学建模</a>
           </li>
@@ -68,18 +64,20 @@
         </div>
         <div class="well">
           <ul>
+            <li><a href="./me.html">学习总结</a></li>
             <li><a href="./MATLAB/matlab_curvefit.html">MATLAB数据拟合</a></li>
             <li><a href="./MATLAB/matlab_symbols.html">MATLAB符号运算</a></li>
             <li><a href="./MATLAB/组合投资模型.html">组合投资模型</a></li>
             <li><a href="./Python/Python期末选题.html">Python跨专业课期末选题</a></li>
             <li><a href="./Python/Python学习笔记.html">Python学习笔记</a></li>
             <li><a href="./MATLAB/matlab_ds.html">MATLAB微分方程求解（未定稿）</a></li>
+            <li><a href="./Linux/Linux基本命令行操作.html">Linux基本命令行操作</a></li>
           </ul>
         </div>
   </div>
   <div class="col-md-5">
     <div class="row">
-        <h1 style="text-align: center; padding: 70px; background-color:rgba(255,0,0,0.5);">R</h1>
+        <h1 style="text-align: center; padding: 70px; background-color:#CD5C5C;">R</h1>
       <div class="firstp">
         <blockquote class="pull-right">
             <h3>R语言</h3>
@@ -90,7 +88,7 @@
       </div>
     </div>
     <div class="row">
-        <h1 style="text-align: center; padding: 70px; background-color:rgba(10,255,0,0.5);">Python</h1>
+        <h1 style="text-align: center; padding: 70px; background-color:orange;">Python</h1>
       <div class="firstp">
         <blockquote class="pull-right">
             <h3>Python</h3>
