--- a/math_model.html
+++ b/math_model.html
@@ -49,7 +49,7 @@
   </div>
   <div class="row tab-pane fade" id="R">
     <div class="col-md-4 col-md-offset-1">
-      <h1 style="text-align: center; padding: 100px; background-color:rgba(255,0,0,0.5);">R</h1>
+      <h1 style="text-align: center; padding: 100px; background-color:#CD5C5C;">R</h1>
     </div>
     <div class="col-md-4 col-md-offset-1 well">
       <ul>
@@ -58,7 +58,7 @@
   </div>
   <div class="row tab-pane fade" id="Python">
     <div class="col-md-4 col-md-offset-1">
-      <h1 style="text-align: center; padding: 100px; background-color:rgba(10,255,0,0.5);">Python</h1>
+      <h1 style="text-align: center; padding: 100px; background-color:orange;">Python</h1>
     </div>
     <div class="col-md-3 col-md-offset-1 well">
       <ul>
@@ -69,7 +69,7 @@
   </div>
   <div class="row tab-pane fade" id="other">
     <div class="col-md-4 col-md-offset-1">
-      <h1 style="text-align: center; padding: 100px; background-color:rgba(10,255,0,0.5);">其他</h1>
+      <h1 style="text-align: center; padding: 100px; background-color:#B0E0EC;">其他</h1>
     </div>
     <div class="col-md-5 col-md-offset-2">
       <ul>
