--- a/math_model.html
+++ b/math_model.html
@@ -73,6 +73,7 @@
     </div>
     <div class="col-md-5 col-md-offset-2">
       <ul>
+        <li><a href="./other/sas/SAS数据读入.html">SAS数据读入</a></li>
       </ul>
     </div>
   </div>
