--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
             <li><a href="./Python/Python学习笔记.html">Python学习笔记</a></li>
             <li><a href="./MATLAB/matlab_ds.html">MATLAB微分方程求解（未定稿）</a></li>
             <li><a href="./Linux/Linux基本命令行操作.html">Linux基本命令行操作</a></li>
+            <li><a href="./MATLAB/MATLAB_xinxingguihua.html">MATLAB线性规划</a></li>
             <li><a href="./other/sas/SAS数据读入.html">SAS数据读入</a></li>
           </ul>
         </div>
