--- a/math_model.html
+++ b/math_model.html
@@ -44,6 +44,7 @@
         <li><a href="./MATLAB/matlab_symbols.html">MATLAB符号运算</a></li>
         <li><a href="./MATLAB/组合投资模型.html">组合投资模型</a></li>
         <li><a href="./MATLAB/matlab_ds.html">MATALB微分方程求解</a></li>
+        <li><a href="./MATLAB/MATLAB_xinxingguihua.html">MATLAB线性规划</a></li>
       </ul>
     </div>
   </div>
