--- a/math_model.html
+++ b/math_model.html
@@ -65,6 +65,7 @@
       <ul>
         <li><a href="./Python/Python期末选题.html">Python期末选题</a></li>
         <li><a href="./Python/Python学习笔记.html">Python学习笔记</a></li>
+        <li><a href="./Python/Python爬虫.html">Python爬虫——期末作业</a></li>
       </ul>
     </div>
   </div>
