--- a/math_model.html
+++ b/math_model.html
@@ -61,7 +61,7 @@
     <div class="col-md-4 col-md-offset-1">
       <h1 style="text-align: center; padding: 100px; background-color:orange;">Python</h1>
     </div>
-    <div class="col-md-3 col-md-offset-1 well">
+    <div class="col-md-4 col-md-offset-1 well">
       <ul>
         <li><a href="./Python/Python期末选题.html">Python期末选题</a></li>
         <li><a href="./Python/Python学习笔记.html">Python学习笔记</a></li>
@@ -73,9 +73,10 @@
     <div class="col-md-4 col-md-offset-1">
       <h1 style="text-align: center; padding: 100px; background-color:#B0E0EC;">其他</h1>
     </div>
-    <div class="col-md-5 col-md-offset-2">
+    <div class="col-md-4 col-md-offset-1 well">
       <ul>
         <li><a href="./other/sas/SAS数据读入.html">SAS数据读入</a></li>
+        <li><a href="./other/sas/SAS对单个数据集的处理.html">SAS对单个数据集的处理</a></li>
       </ul>
     </div>
   </div>
