--- a/index.html
+++ b/index.html
@@ -6,9 +6,6 @@
                     initial-scale=1,
                     maximum-scale=1,">
   <title>李浩的个人主页</title>
-  <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-  <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <style rel="text/css">
   #head{
     background-color: #1E90FF ;
@@ -44,7 +41,10 @@
       </button>
       <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
           <li role="presentation">
-              <a role="menuitem" tabindex="-1" href="./we.html">love</a>
+              <a role="menuitem" tabindex="-1" href="./we.html">统计分析</a>
+          </li>
+          <li role="presentation">
+              <a role="menuitem" tabindex="-1" href="./we.html">机器学习</a>
           </li>
           <li role="presentation">
               <a role="menuitem" tabindex="-1" href="./math_model.html">数学建模</a>
@@ -76,6 +76,7 @@
             <li><a href="./other/sas/SAS数据读入.html">SAS数据读入</a></li>
             <li><a href="./Python/Python爬虫.html">Python爬虫——期末作业</a></li>
             <li><a href="./other/sas/SAS对单个数据集的处理.html">SAS对单个数据集的处理</a></li>
+            <li><a href="./R/tsa/ts1.html"><rb>R时间序列分析</rb></a></li>
           </ul>
         </div>
   </div>
@@ -130,4 +131,7 @@
   <em><small>Developed By LiHao</em></small>
 </footer>
 </body>
+<link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+<script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </html>
