--- a/math_model.html
+++ b/math_model.html
@@ -54,6 +54,8 @@
     </div>
     <div class="col-md-4 col-md-offset-1 well">
       <ul>
+        <li><a href="./R/tsa/ts1.html"><rb>R时间序列分析</rb></a></li>
+        <li><a href="./R/rg/rg.nb.html"><rb>R回归分析相关函数总结</rb></a></li>
       </ul>
     </div>
   </div>
