--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
             <li><a href="./Python/Python爬虫.html">Python爬虫——期末作业</a></li>
             <li><a href="./other/sas/SAS对单个数据集的处理.html">SAS对单个数据集的处理</a></li>
             <li><a href="./R/tsa/ts1.html"><rb>R时间序列分析</rb></a></li>
+            <li><a href="./R/rg/rg.nb.html"><rb>R回归分析相关函数总结</rb></a></li>
           </ul>
         </div>
   </div>
