--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
             <li><a href="./other/sas/SAS对单个数据集的处理.html">SAS对单个数据集的处理</a></li>
             <li><a href="./R/tsa/ts1.html"><rb>R时间序列分析</rb></a></li>
             <li><a href="./R/rg/rg.nb.html"><rb>R回归分析相关函数总结</rb></a></li>
+            <li><a href="./R/aov/aov.html"><rb>R语言做方差分析</rb></a></li>
           </ul>
         </div>
   </div>
